# edge-infer-cpp

./: .gitignore  README.md
01-pixel-control/: CMakeLists.txt  main.cpp
02-image-processing/: CMakeLists.txt
02-sobel-edge/: CMakeLists.txt  main.cpp
03-model-conversion/: export_onnx.py
04-inference-engine/: CMakeLists.txt  inference_ort.cpp  main.cpp
05-optimization/: CMakeLists.txt  benchmark_ort.cpp  main.cpp
06-class-refactoring/: CMakeLists.txt
06-class-refactoring/include/: inference_engine.hpp
06-class-refactoring/src/: inference_engine.cpp
